--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,8 @@ sftp-config.json
 # Visual Studio Code
 .settings/
 .vscode/# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.vscode
+.history
 
 # dependencies
 /.pnp
