--- a/.github/workflow/init.yml
+++ b/.github/workflow/init.yml
@@ -1,17 +1,10 @@
-name: Linting
+name: Linting workflow
 on: [push]
 jobs:
   init:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - name: Staring Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
       - name: install yarn
         run: npm install yarn --global
       - name: install modules
