--- a/.github/workflow/pages.yaml
+++ b/.github/workflow/pages.yaml
@@ -1,19 +1,12 @@
-name: Git pages deploy
+name: Git pages deploy workflow
 on:
   merge:
     branches: [develop]
 jobs:
   init:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - name: Staring Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
       - name: install yarn
         run: npm install yarn --global
       - name: install modules
