--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -3,11 +3,16 @@ on: [push]
 jobs:
   init:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - name: install yarn
-        run: npm install yarn --global
+      - name: Staring Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
       - name: install modules
-        run: yarn install
+        run: npm install
       - name: lint
-        run: yarn run lint
+        run: npm run lint
