Refactor build directory
Изменена директория, в которую собирается проект

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "next dev",
     "build": "next build",
-    "deploy": "gh-pages -d docs",
-    "lint:ts": "tsc && next lint && prettier --check src/",
-    "lint:ts:fix": "tsc && next lint --fix && prettier --write src/"
+    "deploy": "gh-pages -d build",
+    "lint": "tsc && next lint && prettier --check src/",
+    "lint:fix": "tsc && next lint --fix && prettier --write src/"
   },
   "browserslist": [
     "> 1%",
