--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,13 +27,14 @@
       "@/*": [
         "./*"
       ]
-    },
+    }
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "dist/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
