--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "tsc && next lint",
     "lint:fix": "tsc && next lint --fix",
     "prettier": "prettier src/ --check",
-    "prettier:fix": "prettier src/ --write"
+    "prettier:fix": "prettier src/ --write",
+    "stylelint": "stylelint src/**/*.scss",
+    "stylelint:fix": "stylelint src/**/*.scss --fix"
   },
   "browserslist": [
     "> 1%",
@@ -29,7 +31,8 @@
     "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "stylelint-order": "^6.0.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -42,8 +45,9 @@
     "prettier": "^3.1.1",
     "sass": "^1.69.5",
     "stylelint": "15.11.0",
-    "stylelint-config-prettier-scss": "^1.0.0",
+    "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-webpack-plugin": "^4.1.1",
     "typescript": "^5.3.3"
   }
 }
