--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
-    "redux-saga": "^1.2.3",
-    "stylelint-order": "^6.0.4"
+    "redux-saga": "^1.2.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
@@ -41,12 +40,14 @@
     "eslint": "^8.55.0",
     "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "sass": "^1.69.5",
     "stylelint": "15.11.0",
     "stylelint-config-idiomatic-order": "^10.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
+    "stylelint-order": "^6.0.4",
     "stylelint-webpack-plugin": "^4.1.1",
     "typescript": "^5.3.3"
   }
