--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "classnames": "^2.5.1",
+    "formik": "^2.4.5",
     "next": "^14.0.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.2",
     "redux": "^5.0.0",
-    "redux-saga": "^1.2.3"
+    "redux-saga": "^1.2.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.13.2",
